<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/input_bg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:background="@color/input_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_content_margin_left"
            android:layout_marginRight="@dimen/login_content_margin_right"
            android:layout_marginTop="@dimen/register_content_margin_top"
            android:layout_marginBottom="@dimen/register_content_margin_bottom"
            android:gravity="center_horizontal" >
            <!-- Email -->
            <LinearLayout
                android:id="@+id/email_address_layout"
                style="@style/input_layout_style">
                <EditText
                    android:id="@+id/et_email_for_login"
                    style="@style/input_layout_edittext_style"
                    android:hint="@string/email"/>
            </LinearLayout>
            <!-- password -->
            <LinearLayout
                android:id="@+id/password_layout"
                style="@style/input_layout_style"
                android:layout_below="@+id/email_address_layout"
                android:layout_marginTop="@dimen/register_input_layout_margin_top">
                <EditText
                    android:id="@+id/password_for_login"
                    android:inputType="textPassword"
                    style="@style/input_layout_edittext_style"
                    android:hint="@string/passwrod"/>
            </LinearLayout>

            <!-- verification -->
            <LinearLayout
                android:id="@+id/verification_layout"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_layout"
                android:layout_marginTop="@dimen/register_input_layout_margin_top"
                >
                <LinearLayout
                    android:id="@+id/verification_code_layout"
                    android:layout_width="160dp"
                    android:layout_weight="1"
                    style="@style/input_layout_verification_code_style" >
                    <EditText
                        android:id="@+id/et_input_verification_code"
                        style="@style/input_layout_edittext_style"
                        android:inputType="number"
                        android:layout_toLeftOf="@+id/iv_verification_code"
                        android:hint="@string/vercode" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/verification_code_layout1"
                    android:layout_width="165dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    style="@style/input_layout_verification_code_style">
                    <ImageView
                        android:id="@+id/login_image_code"
                        android:layout_width="80dp"
                        android:layout_height="fill_parent"
                        android:src="@drawable/codeone"
                        />
                    <TextView
                        android:id="@+id/login_change_one"
                        android:paddingTop="12dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@drawable/btn_forgetpwd_text_color_selector"
                        android:text="换一张"/>
                </LinearLayout>
            </LinearLayout>
            <!-- login_button -->
            <Button
                android:id="@+id/btn_login"
                style="@style/redbutton"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_below="@+id/verification_layout"
                android:layout_marginTop="@dimen/register_register_btn_margin_top"
                android:text="@string/loginbutton"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/btn_login"

                android:layout_marginRight="@dimen/login_content_margin_right"
                android:layout_marginTop="@dimen/login_password_margin_top"
                android:text="@string/regitster_forfree"
                android:textColor="@drawable/btn_register_text_color_selector"
                android:textSize="15dp" />
            <TextView
                android:id="@+id/tv_forgot_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btn_login"
                android:layout_marginLeft="@dimen/login_content_margin_left"
                android:layout_marginTop="@dimen/login_password_margin_top"
                android:text="@string/forger_passwrod"
                android:textColor="@drawable/btn_forgetpwd_text_color_selector"
                android:textSize="15dp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
